--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,17 @@
-@font-face {
-  font-family: 'HYWenHei';
-  src: url('../res/HYWenHei-85W.ttf')  format('truetype');
-}
-
 :root {
-  --speed: 0.1;
+  --speed_mult: 1.0;
+
+  /* marquee time: (.217s / op * img_len * 2) */
+  --trackA_speed: calc((.217s / 94 * 33112 * 2) / var(--speed_mult));
+  --trackB_speed: calc((.217s / 170 * 14508 * 2) / var(--speed_mult));
+  --trackC_speed: calc((.217s / 20 * 33112 * 2) / var(--speed_mult));
+  --trackD_speed: calc((.217s / 76 * 14148 * 2) / var(--speed_mult));
 }
 
 body {
-  font-family: 'HYWenHei', Fallback, sans-serif;
   margin: 0;
   padding: 0;
-  color: #e5d4be;
-  background-color: #18180c;
+  background-color: #0d0f04;
 }
 
 .marquee {
@@ -25,48 +24,50 @@ body {
 
 .trackA {
   position: absolute;
-  top: -3vh;
+  top: 0vh;
   white-space: nowrap;
   will-change: transform;
-  font-size: 30vh;
-  animation: marquee calc(40s / var(--speed)) linear infinite;
+  animation: marquee var(--trackA_speed) linear infinite;
+}
+
+.trackA img {
+  height: calc(774vh/2160*100);
 }
 
 .trackB {
   position: absolute;
-  top: 33vh;
+  top: calc(754vh/2160*100);
   white-space: nowrap;
   will-change: transform;
-  font-size: 13vh;
-  animation: marquee calc(5s / var(--speed)) linear infinite;
+  animation: marquee var(--trackB_speed) linear infinite;
+}
+
+.trackB img {
+  height: calc(351vh/2160*100);
 }
 
 .trackC {
   position: absolute;
-  top: 45vh;
+  top: calc(1016vh/2160*100);
   white-space: nowrap;
   will-change: transform;
-  font-size: 30vh;
-  animation: marquee calc(55s / var(--speed)) linear infinite;
+  animation: marquee var(--trackC_speed) linear infinite;
+}
+
+.trackC img {
+  height: calc(774vh/2160*100);
 }
 
 .trackD {
   position: absolute;
-  top: 82vh;
+  top: calc(1790vh/2160*100);
   white-space: nowrap;
   will-change: transform;
-  font-size: 13vh;
-  animation: marquee calc(8s / var(--speed)) linear infinite;
+  animation: marquee var(--trackD_speed) linear infinite;
 }
 
-.ghostA {
-  height: 28vh;
-  transform: translateY(22.5%);
-}
-
-.ghostB {
-  height: 28vh;
-  transform: translateY(22.5%) scaleX(-1);
+.trackD img {
+  height: calc(342vh/2160*100);
 }
 
 @keyframes marquee {
